--- a/Algorithms/Oxu.az/about.html
+++ b/Algorithms/Oxu.az/about.html
@@ -32,7 +32,7 @@
                 <input type="text" placeholder="Axtaris" name="search" style="font-size: 22px;
                 background-color: transparent;
                 border: 2px solid rgb(67, 29, 207) ">
-                <i class="fa fa-search" style="font-size: 19px;padding: 4px; "></i>
+              <i class="fa fa-search" style="font-size: 19px;padding: 4px;position: absolute;right: 340px;top: 10px;"></i>
 
 
             </div>
