--- a/Algorithms/Tasks-2/foot.html
+++ b/Algorithms/Tasks-2/foot.html
@@ -36,7 +36,7 @@
             box-sizing: border-box;
         }
         
-        .footer-container {
+        /* .footer-container {
             border: 2px solid red;
             height: 850px;
             width: 100%;
@@ -191,7 +191,7 @@
     <div class="footer-container">
         <div class="row">
             <div class="col-3">
-                <div class="footer-blok">
+                <!-- <div class="footer-blok">
                     <h2>Information</h2>
                     <ul>
                         <li>About Us</li>
@@ -200,10 +200,10 @@
                         <li>Terms & Conditions</li>
                         <li> Site Map</li>
                     </ul>
-                </div>
+                </div> -->
             </div>
             <div class="col-3">
-                <div class="extra-link">
+                <!-- <div class="extra-link">
                     <h2>Extras</h2>
                     <ul>
                         <li>Brands</li>
@@ -212,10 +212,10 @@
                         <li>Specials</li>
                         <li>Contact Us</li>
                     </ul>
-                </div>
+                </div> -->
             </div>
             <div class="col-3">
-                <div class="my-account">
+                <!-- <div class="my-account">
                     <h2>My Account </h2>
                     <ul>
                         <li> My Account</li>
@@ -224,10 +224,10 @@
                         <li>Newsletter</li>
                         <li>Returns</li>
                     </ul>
-                </div>
+                </div> -->
             </div>
             <div class="col-3">
-                <div class="contact">
+                <!-- <div class="contact">
                     <h2>Contact Us</h2>
 
                     <ul>
@@ -249,28 +249,14 @@
                             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
 
             </div>
 
         </div>
-    </div>
+    </div> */
 
 
-    <div class="foot">
-
-        <div class="kidpay">
-
-            <div class="toys"><span>Powered By OpenCart Kidpay Toys Store ©️ 2021</span>
-                <span>Subscribe</span></div>
-        </div>
-
-        <div class="mail">
-            <input type="email" placeholder="Enter Your Email Address">
-            <div class="plane"><i class="fas fa-paper-plane"></i></div>
-        </div>
-
-    </div>
 </footer>
 
 
