--- a/ProjectFrontEnd/Kidpay/index.html
+++ b/ProjectFrontEnd/Kidpay/index.html
@@ -622,7 +622,10 @@
 
     <section footer>
         <div class="footer-container">
-            <div class="row" style="display: flex; align-items: center; justify-content: center;">
+            <img src="img/footer-pattan-left.png" alt="" style="position: absolute;top: 201px;left: -47px;">
+<img src="img/footer-pattan-right.png" alt="" style="position: absolute;top: 322px;left: 1104px;">
+
+            <div class="row" style="display: flex; align-items: center; justify-content: center; position: absolute;top: 350px;left: 300px;background: #fff;">
                 <div class="footer-blok">
                     <h2>Information</h2>
                     <ul>
