--- a/ProjectFrontEnd/Kidpay/page.html
+++ b/ProjectFrontEnd/Kidpay/page.html
@@ -705,6 +705,8 @@
                             <section footer>
                                 <footer>
                                     <div class="footer-container">
+                                        <img src="img/footer-pattan-left.png" alt="">
+                                        <img src="img/footer-pattan-right.png" alt="">
                                         <div class="row">
                                             <div class="col-3">
                                                 <div class="footer-blok">
