--- a/ProjectFrontEnd/MyPortfolio/portfolio.html
+++ b/ProjectFrontEnd/MyPortfolio/portfolio.html
@@ -21,18 +21,15 @@
             <p>A FEW RECENT DESIGN AND CODING PROJECTS. WANT TO SEE MORE? EMAIL ME</p>
         </div>
         <div class="images">
-            <img src="img/project-1.jpg" alt="">
-            <div class="overlay">
-                <div class="format">IMAGE FORMAT</div>
-              </div>
-            <img src="img/project-2.jpg" alt="">
-            <img src="img/project-4.jpg" alt="">
-            <img src="img/project-5.jpg" alt="">
-            <img src="img/project-6.jpg" alt="">
-            <img src="img/project-8.jpg" alt="">
-            <img src="img/project-5.jpg" alt="">
-            <img src="img/project-6.jpg" alt="">
-            <img src="img/project-8.jpg" alt="">
+            <a href="#"><img src="img/project-1.jpg" alt=""></a>
+            <a href="#"><img src="img/project-2.jpg" alt=""></a>
+            <a href="#"><img src="img/project-4.jpg" alt=""></a>
+            <a href="#"><img src="img/project-5.jpg" alt=""></a>
+            <a href="#"><img src="img/project-6.jpg" alt=""></a>
+            <a href="#"><img src="img/project-8.jpg" alt=""></a>
+            <a href="#"><img src="img/project-5.jpg" alt=""></a>
+            <a href="#"><img src="img/project-6.jpg" alt=""></a>
+            <a href="#"><img src="img/project-8.jpg" alt=""></a> 
         </div>
     </div>
 </section>
