--- a/ProjectFrontEnd/MyPortfolio/index.html
+++ b/ProjectFrontEnd/MyPortfolio/index.html
@@ -1,49 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap"
+        rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<!-- Home Section Starts -->
+    <!-- Home Section Starts -->
     <section id="home">
         <div class="container-home">
-          <div class="navbar">
+            <div class="navbar">
                 <div class="bars">
                     <a href="#"><i class="fas fa-bars"></i></a>
                     <!-- <a href="#"><i class="fas fa-times"></i></a> -->
                 </div>
                 <div class="navbar-nav ">
-                    <a href="index.html"><i class= "fa fa-home"></i></a> 
-                    <a href="about.html"><i class="fa fa-user"></i></a> 
-                    <a href="portfolio.html"><i class="fa fa-briefcase"></i></a> 
-                    <a href="contact.html"><i class="fa fa-envelope"></i></a>
-                    <a href="#"><i class="fa fa-comments"></i></a> 
+                   
+                    <a href="index.html"><i class="fa fa-home"></i><span>HOME</span></a>
+                    <a href="about.html"><i class="fa fa-user"></i><span>ABOUT</span></a>
+                    <a href="portfolio.html"><i class="fa fa-briefcase"></i><span>PORTFOLIO</span></a>
+                    <a href="contact.html"><i class="fa fa-comments"></i><span>CONTACT</span></a>
+                    <a href="#"><i class="fa fa-envelope"></i></a>
+               
                 </div>
-         </div>
-
-         <div class="freelancer">
-            <div class="IM">
-                <h3 style="font-size: 19px; font-weight: 400;">HI THERE!</h3>
-                <h1 style="margin: 18px 0px 10px;">I'M <SPan style="color: #ffb400;">A FREELANCER</span></h1>
-                <p style="margin: 11px 0 23px;font-size: 16px;line-height: 32px;">I'm a Freelance UI/UX Designer and Developer based in London, England. I strives to build immersive and beautiful web applications through carefully crafted code and user-centric design.</p>
             </div>
 
-            <div class="btn">
-                <a href="about.html"><button style="border: none;" ><i class="fas fa-user"></i>MORE ABOUT ME!</button></a>
-                <a href="portfolio.html"><button style="background-color: transparent;"><i class="fas fa-suitcase"></i>PORTFOLIO</button></a>
+            <div class="freelancer">
+                <div class="IM">
+                    <h3 style="font-size: 19px; font-weight: 400;">HI THERE!</h3>
+                    <h1 style="margin: 18px 0px 10px;">I'M <SPan style="color: #ffb400;">A FREELANCER</span></h1>
+                    <p style="margin: 11px 0 23px;font-size: 16px;line-height: 32px;">I'm a Freelance UI/UX Designer and
+                        Developer based in London, England. I strives to build immersive and beautiful web applications
+                        through carefully crafted code and user-centric design.</p>
+                </div>
+
+                <div class="btn">
+                    <a href="about.html"><button style="border: none;"><i class="fas fa-user"></i>MORE ABOUT
+                            ME!</button></a>
+                    <a href="portfolio.html"><button style="background-color: transparent;"><i
+                                class="fas fa-suitcase"></i>PORTFOLIO</button></a>
+                </div>
             </div>
-         </div>    
-       </div>
-   </section>
-<!-- Home Section End -->
+        </div>
+    </section>
+    <!-- Home Section End -->
 
 </body>
+
 </html>
