--- a/ProjectFrontEnd/MyPortfolio/contact.html
+++ b/ProjectFrontEnd/MyPortfolio/contact.html
@@ -22,6 +22,23 @@
     <!-- Contact Section Starts -->
     <section id="contact">
         <div class="container-contact">
+            <div class="navbar">
+                <div class="bars">
+                    <i class="fas fa-bars" onclick="deyis()" id="open"></i>
+                    <i class="fas fa-times" onclick="bagla()" id="close"></i>
+                </div>
+                <div class="navbar-nav ">
+                    <a href="index.html" onclick="_border()"><i class="fa fa-home"></i><span
+                            style="padding-left: 25px;margin-left: 17px;">HOME</span></a>
+                    <a href="about.html" onclick="_border()"><i class="fa fa-user"></i><span
+                            style="padding-left: 25px;margin-left: 20px;">ABOUT</span></a>
+                    <a href="portfolio.html" onclick="_border()"><i class="fa fa-briefcase"></i><span
+                            style="padding-left: 25px;margin-left: 18px;">PORTFOLIO</span></a>
+                    <a href="contact.html" onclick="_border()"><i class="fa fa-comments"></i><span
+                            style="padding-left: 25px;margin-left: 16px;">CONTACT</span></a>
+                    <!-- <a href="#"><i class="fa fa-envelope"></i></a> -->
+                </div>
+            </div>
             <div class="text">
                 <h2>GET <span style="color: #ffb400;">IN TOUCH</span> </h2>
                 <p>I’M ALWAYS OPEN TO DISCUSSING PRODUCT DESIGN WORK OR PARTNERSHIPS.</p>
@@ -79,6 +96,7 @@
         </div>
     </section>
     <!-- Contact Section End -->
+    <script src="./JS/app.js"></script>
 </body>
 
 </html>
