--- a/ProjectFrontEnd/MyPortfolio/index.html
+++ b/ProjectFrontEnd/MyPortfolio/index.html
@@ -22,16 +22,16 @@
         <div class="container-home">
             <div class="navbar">
                 <div class="bars">
-                    <a href="#"><i class="fas fa-bars"></i></a>
-                    <!-- <a href="#"><i class="fas fa-times"></i></a> -->
+                    <i class="fas fa-bars"  onclick="deyis()" id="open"></i>
+                    <i class="fas fa-times"  onclick="bagla()" id="close"></i>
                 </div>
                 <div class="navbar-nav ">
                    
-                    <a href="index.html"><i class="fa fa-home"></i><span>HOME</span></a>
-                    <a href="about.html"><i class="fa fa-user"></i><span>ABOUT</span></a>
-                    <a href="portfolio.html"><i class="fa fa-briefcase"></i><span>PORTFOLIO</span></a>
-                    <a href="contact.html"><i class="fa fa-comments"></i><span>CONTACT</span></a>
-                    <a href="#"><i class="fa fa-envelope"></i></a>
+                    <a href="index.html" onclick="_border()"><i class="fa fa-home"></i><span style="padding-left: 25px;margin-left: 17px;" >HOME</span></a>
+                    <a href="about.html" onclick="_border()"><i class="fa fa-user"></i><span  style="padding-left: 25px;margin-left: 20px;">ABOUT</span></a>
+                    <a href="portfolio.html" onclick="_border()"><i class="fa fa-briefcase"></i><span  style="padding-left: 25px;margin-left: 18px;">PORTFOLIO</span></a>
+                    <a href="contact.html" onclick="_border()"><i class="fa fa-comments"></i><span  style="padding-left: 25px;margin-left: 16px;">CONTACT</span></a>
+                    <!-- <a href="#"><i class="fa fa-envelope"></i></a> -->
                
                 </div>
             </div>
@@ -55,7 +55,7 @@
         </div>
     </section>
     <!-- Home Section End -->
-
+<script src="./JS/app.js"></script>
 </body>
 
 </html>
