--- a/ProjectFrontEnd/MyPortfolio/portfolio.html
+++ b/ProjectFrontEnd/MyPortfolio/portfolio.html
@@ -21,6 +21,23 @@
     <!-- Portfolio Section Starts -->
     <section id="portfolio">
         <div class="container-portfolio">
+            <div class="navbar">
+                <div class="bars">
+                    <i class="fas fa-bars" onclick="deyis()" id="open"></i>
+                    <i class="fas fa-times" onclick="bagla()" id="close"></i>
+                </div>
+                <div class="navbar-nav ">
+                    <a href="index.html" onclick="_border()"><i class="fa fa-home"></i><span
+                            style="padding-left: 25px;margin-left: 17px;">HOME</span></a>
+                    <a href="about.html" onclick="_border()"><i class="fa fa-user"></i><span
+                            style="padding-left: 25px;margin-left: 20px;">ABOUT</span></a>
+                    <a href="portfolio.html" onclick="_border()"><i class="fa fa-briefcase"></i><span
+                            style="padding-left: 25px;margin-left: 18px;">PORTFOLIO</span></a>
+                    <a href="contact.html" onclick="_border()"><i class="fa fa-comments"></i><span
+                            style="padding-left: 25px;margin-left: 16px;">CONTACT</span></a>
+                    <!-- <a href="#"><i class="fa fa-envelope"></i></a> -->
+                </div>
+            </div>
             <div class="text">
                 <h2>MY <span style="color: #ffb400;">PORTFOLIO</span> </h2>
                 <p>A FEW RECENT DESIGN AND CODING PROJECTS. WANT TO SEE MORE? EMAIL ME</p>
@@ -39,6 +56,7 @@
         </div>
     </section>
     <!-- Portfolio Section End -->
+    <script src="./JS/app.js"></script>
 </body>
 
 </html>
